[package]
name = "first_lambda"
version = "0.1.0"
authors = ["Darren Picard <darren.picard@neofinancial.com>"]
edition = "2018"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.10.1"
lambda_runtime = "0.4"
serde = "^1"
serde_json = "^1"
log = "^0.4"
simple_logger = "^1"

[[bin]]
name = "bootstrap"
path = "src/main.rs"